Prevent FIG code blocks from breaking layout on small screens
The text inside FIG `pre` elements is bleeding outside its container
causing the page width to be larger than it should be.

--- a/cfgov/unprocessed/apps/filing-instruction-guide/css/main.less
+++ b/cfgov/unprocessed/apps/filing-instruction-guide/css/main.less
@@ -48,7 +48,6 @@
     font-family: Menlo, 'Andale Mono', 'Courier New', monospace;
     overflow-x: auto;
     font-size: unit(14px / @base-font-size-px, em);
-    white-space: pre;
   }
 
   .o-table {
